test/corpus/expressions.txt
================================================================================
Identifier
================================================================================

foo

--------------------------------------------------------------------------------

(source_file
  (identifier))

================================================================================
Variable
================================================================================

$myVar

--------------------------------------------------------------------------------

(source_file
  (variable))

================================================================================
This reference
================================================================================

@

--------------------------------------------------------------------------------

(source_file
  (this))

================================================================================
Parent reference
================================================================================

^

--------------------------------------------------------------------------------

(source_file
  (parent))

================================================================================
Everything
================================================================================

*

--------------------------------------------------------------------------------

(source_file
  (everything))

================================================================================
Parenthesized expression
================================================================================

(foo)

--------------------------------------------------------------------------------

(source_file
  (parenthesized_expression
    (identifier)))

================================================================================
Property access
================================================================================

foo.bar

--------------------------------------------------------------------------------

(source_file
  (access_expression
    base: (identifier)
    member: (identifier)))

================================================================================
Chained property access
================================================================================

foo.bar.baz

--------------------------------------------------------------------------------

(source_file
  (access_expression
    base: (access_expression
      base: (identifier)
      member: (identifier))
    member: (identifier)))

================================================================================
This property access
================================================================================

@.name

--------------------------------------------------------------------------------

(source_file
  (access_expression
    base: (this)
    member: (identifier)))

================================================================================
Parent chain access
================================================================================

^.^.title

--------------------------------------------------------------------------------

(source_file
  (access_expression
    base: (access_expression
      base: (parent)
      member: (parent))
    member: (identifier)))

================================================================================
Subscript expression
================================================================================

foo[0]

--------------------------------------------------------------------------------

(source_file
  (subscript_expression
    base: (identifier)
    index: (number)))

================================================================================
Empty subscript (array all)
================================================================================

foo[]

--------------------------------------------------------------------------------

(source_file
  (subscript_expression
    base: (identifier)))

================================================================================
Slice expression (inclusive)
================================================================================

foo[0..10]

--------------------------------------------------------------------------------

(source_file
  (subscript_expression
    base: (identifier)
    start: (number)
    end: (number)))

================================================================================
Slice expression (exclusive)
================================================================================

foo[0...10]

--------------------------------------------------------------------------------

(source_file
  (subscript_expression
    base: (identifier)
    start: (number)
    end: (number)))

================================================================================
Dereference expression
================================================================================

author->name

--------------------------------------------------------------------------------

(source_file
  (dereference_expression
    base: (identifier)
    member: (identifier)))

================================================================================
Dereference without member
================================================================================

author->

--------------------------------------------------------------------------------

(source_file
  (dereference_expression
    base: (identifier)))
