test/corpus/literals.txt
================================================================================
Null literal
================================================================================

null

--------------------------------------------------------------------------------

(source_file
  (null))

================================================================================
Boolean literals
================================================================================

true

--------------------------------------------------------------------------------

(source_file
  (true))

================================================================================
Integer number
================================================================================

42

--------------------------------------------------------------------------------

(source_file
  (number))

================================================================================
Negative number
================================================================================

-42

--------------------------------------------------------------------------------

(source_file
  (number))

================================================================================
Decimal number
================================================================================

3.14159

--------------------------------------------------------------------------------

(source_file
  (number))

================================================================================
Scientific notation
================================================================================

1.5e10

--------------------------------------------------------------------------------

(source_file
  (number))

================================================================================
Double quoted string
================================================================================

"hello world"

--------------------------------------------------------------------------------

(source_file
  (string
    (double_quoted_string)))

================================================================================
Single quoted string
================================================================================

'hello world'

--------------------------------------------------------------------------------

(source_file
  (string
    (single_quoted_string)))

================================================================================
String with escape sequences
================================================================================

"line1\nline2\ttabbed"

--------------------------------------------------------------------------------

(source_file
  (string
    (double_quoted_string
      (escape_sequence)
      (escape_sequence))))

================================================================================
String with unicode escapes
================================================================================

"\u0041\u0042\u0043"

--------------------------------------------------------------------------------

(source_file
  (string
    (double_quoted_string
      (escape_sequence)
      (escape_sequence)
      (escape_sequence))))
