test/corpus/operators.txt
================================================================================
Addition
================================================================================

a + b

--------------------------------------------------------------------------------

(source_file
  (binary_expression
    left: (identifier)
    right: (identifier)))

================================================================================
Subtraction
================================================================================

a - b

--------------------------------------------------------------------------------

(source_file
  (binary_expression
    left: (identifier)
    right: (identifier)))

================================================================================
Multiplication
================================================================================

a * b

--------------------------------------------------------------------------------

(source_file
  (binary_expression
    left: (identifier)
    right: (identifier)))

================================================================================
Division
================================================================================

a / b

--------------------------------------------------------------------------------

(source_file
  (binary_expression
    left: (identifier)
    right: (identifier)))

================================================================================
Modulo
================================================================================

a % b

--------------------------------------------------------------------------------

(source_file
  (binary_expression
    left: (identifier)
    right: (identifier)))

================================================================================
Exponentiation
================================================================================

2 ** 3

--------------------------------------------------------------------------------

(source_file
  (binary_expression
    left: (number)
    right: (number)))

================================================================================
Unary minus
================================================================================

-x

--------------------------------------------------------------------------------

(source_file
  (unary_expression
    operand: (identifier)))

================================================================================
Not expression
================================================================================

!flag

--------------------------------------------------------------------------------

(source_file
  (not_expression
    operand: (identifier)))

================================================================================
Equality
================================================================================

a == b

--------------------------------------------------------------------------------

(source_file
  (comparison_expression
    left: (identifier)
    right: (identifier)))

================================================================================
Inequality
================================================================================

a != b

--------------------------------------------------------------------------------

(source_file
  (comparison_expression
    left: (identifier)
    right: (identifier)))

================================================================================
Less than
================================================================================

a < b

--------------------------------------------------------------------------------

(source_file
  (comparison_expression
    left: (identifier)
    right: (identifier)))

================================================================================
Greater than
================================================================================

a > b

--------------------------------------------------------------------------------

(source_file
  (comparison_expression
    left: (identifier)
    right: (identifier)))

================================================================================
Less than or equal
================================================================================

a <= b

--------------------------------------------------------------------------------

(source_file
  (comparison_expression
    left: (identifier)
    right: (identifier)))

================================================================================
Greater than or equal
================================================================================

a >= b

--------------------------------------------------------------------------------

(source_file
  (comparison_expression
    left: (identifier)
    right: (identifier)))

================================================================================
And expression
================================================================================

a && b

--------------------------------------------------------------------------------

(source_file
  (and_expression
    left: (identifier)
    right: (identifier)))

================================================================================
Or expression
================================================================================

a || b

--------------------------------------------------------------------------------

(source_file
  (or_expression
    left: (identifier)
    right: (identifier)))

================================================================================
In expression
================================================================================

x in [1, 2, 3]

--------------------------------------------------------------------------------

(source_file
  (in_expression
    left: (identifier)
    right: (array
      (number)
      (number)
      (number))))

================================================================================
Match expression
================================================================================

title match "Star*"

--------------------------------------------------------------------------------

(source_file
  (match_expression
    left: (identifier)
    right: (string
      (double_quoted_string))))

================================================================================
Pipe expression
================================================================================

*[_type == "movie"] | order(name)

--------------------------------------------------------------------------------

(source_file
  (pipe_expression
    left: (subscript_expression
      base: (everything)
      index: (comparison_expression
        left: (identifier)
        right: (string
          (double_quoted_string))))
    right: (function_call
      name: (identifier)
      (identifier))))

================================================================================
Operator precedence
================================================================================

a + b * c

--------------------------------------------------------------------------------

(source_file
  (binary_expression
    left: (identifier)
    right: (binary_expression
      left: (identifier)
      right: (identifier))))
